# Research-Companion-Agent

./: .env.example  .gitignore  config.toml  eval-baseline.txt  pyproject.toml
.claude/: settings.local.json
docs/superpowers/plans/: 2026-05-04-research-companion-agent.md
docs/superpowers/specs/: 2026-05-04-research-companion-agent-design.md
src/research_agent/: graph.py  graphiti_setup.py  nodes.py  reflect.py  schemas.py  settings.py  state.py  ui.py  web.py
tests/: build_fixture.py  eval_dataset.py  test_eval.py  test_routing.py  test_schemas.py  test_settings.py  test_smoke_graphiti.py  test_smoke_research.py  test_smoke_web.py
